--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
         <div class="sobre-texto">
           <p>
-            <strong class="pf">Olá sou João Mateus</strong><br><br>Tenho <strong>20 anos</strong> moro em são josé do
-            rio preto Sp e sou apaixonado por
+            <strong class="pf">Olá sou João Mateus</strong><br><br>Tenho <strong>20 anos</strong> moro em São José 
+            do Rio Preto, SP e sou apaixonado por
             <strong>tecnologia, inovação e programação</strong>. Estou sempre em busca de evolução,
             aprendendo constantemente e aplicando o que estudo na prática.
           </p>
@@ -246,20 +246,38 @@
 
 
   <div>
-    <h2 class="projeto" id="projects">Meus <span class="p">Projetos</span></h2>
+    <h2 class="projeto" id="projects">Alguns <span class="p">Projetos</span></h2>
   </div>
 
   <div class="contaneir reverse" style="--width: 400px; --height: 590px; --quantity: 6;">
 
+    <h4>Clique ⬇️</h4>
     <div class="carrosel">
       <a href="https://pokedex-1-chi.vercel.app/" target="_blank">
         <div class="item" style="--delay:0"><img src="Img/item2-1.png" alt=""></div>
       </a>
+
+      <a href="https://conversor-de-moedas-bay.vercel.app/" target="_blank">
       <div class="item" style="--delay:1"><img src="Img/item2-2.png" alt=""></div>
+      </a>
+
+      <a href="https://site-nike-joao-mateus-martins-alves-projects.vercel.app/" target="_blank">
       <div class="item" style="--delay:2"><img src="Img/item2-3.png" alt=""></div>
-      <div class="item" style="--delay:3"><img src="Img/item2-4.png" alt=""></div>
+      </a>
+
+      <a href="https://projeto-loja-de-carros-eight.vercel.app/" target="_blank">
+      <div class="item" style="--delay:3"><img src="Img/item2-4.png " alt=""></div>
+      </a>
+
+      <a href="https://restaurante-page-sooty.vercel.app/" target="_blank">
       <div class="item" style="--delay:4"><img src="Img/item2-5.png" alt=""></div>
+      </a>
+
+      <a href="https://landing-page-sandy-psi-56.vercel.app/" target="_blank">
       <div class="item" style="--delay:5"><img src="Img/item2-6.png" alt=""></div>
+      </a>
+
+      
     </div>
   </div>
 
@@ -295,7 +313,7 @@
   <footer class="rodape">
 
     <div class="tag">
-      <h1 class="logo2">Portifolio</h1>
+      <h1 class="logo2">Portfólio</h1>
 
       <div class="email">
         <a id="email"
