--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <header class="Box">
   <div class="nav">
     <!-- LOGO -->
-    <div class="logo">Dev João Mateus</div>
+    <div class="logo"><h2>Dev João Mateus</h2></div>
 
     <!-- MENU TRADICIONAL (sempre visível em desktop) -->
     <nav class="desktop-nav">
