--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     <section class="rodape2">
 
 
-      <div class="socials">
+      <div class="socials2">
 
         <div class="l">
           <a href="https://www.linkedin.com/in/jo%C3%A3o-mateus-martins-alves-454745290/" target="_blank"><i
