--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <div class="P">
       <div class="R">
-        <img src="Img/profile1.png" alt="Foto de perfil" class="profile">
+        <img src="Img/Generated Image November 12, 2025 - 12_32AM.png" alt="Foto de perfil" class="profile">
 
         <div class="sobre-texto">
           <p>
@@ -179,8 +179,11 @@
         </div>
       </div>
     </div>
+    
 
   </section>
+
+  
 
 
   <div class="especialidades" id="especialidades">
