--- a/index.html
+++ b/index.html
@@ -25,31 +25,33 @@
 
   <!-- NAV -->
   <!-- header -->
-<header class="Box">
-  <div class="nav">
-    <!-- LOGO -->
-    <div class="logo"><h2>Dev João Mateus</h2></div>
+  <header class="Box">
+    <div class="nav">
+      <!-- LOGO -->
+      <div class="logo">
+        <h2>Dev João Mateus</h2>
+      </div>
 
-    <!-- MENU TRADICIONAL (sempre visível em desktop) -->
-    <nav class="desktop-nav">
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#especialidades">Especialidades</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#contato">Contato</a></li>
-      </ul>
-    </nav>
+      <!-- MENU TRADICIONAL (sempre visível em desktop) -->
+      <nav class="desktop-nav">
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#especialidades">Especialidades</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
 
-    <!-- BOTÃO que ABRE o menu mobile (também visível no desktop) -->
-    <button class="menu-toggle" id="menu-toggle" aria-expanded="false" aria-controls="menu">
-      ☰
-    </button>
-  </div>
-  
-</header>
+      <!-- BOTÃO que ABRE o menu mobile (também visível no desktop) -->
+      <button class="menu-toggle" id="menu-toggle" aria-expanded="false" aria-controls="menu">
+        ☰
+      </button>
+    </div>
 
-<!-- MENU MOBILE (abre ao clicar no botão) -->
+  </header>
+
+  <!-- MENU MOBILE (abre ao clicar no botão) -->
   <div class="menu1" id="menu" aria-hidden="true">
     <ul>
       <li><a href="#home">Home</a></li>
@@ -101,10 +103,8 @@
 
   </section>
 
-  <div class="sobre" id="sobre">
-
-  </div>
-
+  <div id="sobre"></div>
+<br> 
   <section class="Sobre">
 
     <div class="title">
@@ -115,80 +115,73 @@
       </div>
     </div>
 
-    <div class="P">
-      <div class="R">
-        <img src="Img/Generated Image November 12, 2025 - 12_32AM.png" alt="Foto de perfil" class="profile">
 
-        <div class="sobre-texto">
-          <p>
-            <strong class="pf">Olá sou João Mateus</strong><br><br>Tenho <strong>20 anos</strong> moro em São José
-            do Rio Preto, SP e sou apaixonado por
-            <strong>tecnologia, inovação e programação</strong>. Estou sempre em busca de evolução,
-            aprendendo constantemente e aplicando o que estudo na prática.
-          </p>
+    <div class="R">
+      <img src="Img/Generated Image November 12, 2025 - 12_32AM.png" alt="Foto de perfil" class="profile">
 
-          <p>
-            Atualmente curso <strong>Full Stack no DevClub</strong> e também me aperfeiçoo em
-            <strong>Word, Excel e PowerPoint</strong> para o mercado home office.
-            Minha trajetória me levou a explorar tanto o <em>front-end</em> quanto o <em>back-end</em> —
-            hoje foco principalmente no full stack, mas a maior parte dos meus projetos ainda está voltada para o
-            front-end.
-          </p>
+      <div class="sobre-texto">
+        <p>
+          <strong class="pf">Olá sou João Mateus</strong><br><br>Tenho <strong>20 anos</strong> moro em São José
+          do Rio Preto, SP e sou apaixonado por
+          <strong>tecnologia, inovação e programação</strong>. Estou sempre em busca de evolução,
+          aprendendo constantemente e aplicando o que estudo na prática.
+        </p>
 
-          <p>
-            Tenho <strong>mente aberta</strong> para aprender, espírito colaborativo e acredito que saber ouvir,
-            respeitar e agir no momento certo é essencial para crescer como profissional.
-            Já domino <strong>HTML, CSS, Git, GitHub e JavaScript básico. </strong> <br>
-            <br>
-            O que me define como desenvolvedor Mentalidade de crescimento: sempre disposto a estudar o novo, errar e
-            refinar.
-            Curiosidade tecnológica: explorar tendências, bibliotecas e inovações no ecossistema.
-            Trabalho em equipe & comunicação: saber ouvir, propor ideias e converter feedback em melhorias.
-            Foco em qualidade: código limpo, boas práticas, legibilidade e escalabilidade sempre em mente.
-            Metas de curto e médio prazo
-            Consolidar habilidades em back-end, dominando Node.js, APIs REST, autenticação e banco de dados
-            Construir aplicações full stack completas e aplicáveis no mundo real
-            Aprimorar conhecimentos de DevOps, deploy e infraestrutura
-            Participar de projetos colaborativos de código aberto
-            Construir um portfólio sólido que traduza minhas competências para futuros empregadores ou clientes
-            e continuo ampliando minhas habilidades diariamente.
-            <strong>Confira meus projetos no GitHub e linkedin: ⬇️</strong>
+        <p>
+          Atualmente curso <strong>Full Stack no DevClub</strong> e também me aperfeiçoo em
+          <strong>Word, Excel e PowerPoint</strong> para o mercado home office.
+          Minha trajetória me levou a explorar tanto o <em>front-end</em> quanto o <em>back-end</em> —
+          hoje foco principalmente no full stack, mas a maior parte dos meus projetos ainda está voltada para o
+          front-end.
+        </p>
 
-          <div class="link">
+        <p>
+          Tenho <strong>mente aberta</strong> para aprender, espírito colaborativo e acredito que saber ouvir,
+          respeitar e agir no momento certo é essencial para crescer como profissional.
+          Já domino <strong>HTML, CSS, Git, GitHub e JavaScript básico. </strong> <br>
+          <br>
+          O que me define como desenvolvedor Mentalidade de crescimento: sempre disposto a estudar o novo, errar e
+          refinar.
+          Curiosidade tecnológica: explorar tendências, bibliotecas e inovações no ecossistema.
+          Trabalho em equipe & comunicação: saber ouvir, propor ideias e converter feedback em melhorias.
+          Foco em qualidade: código limpo, boas práticas, legibilidade e escalabilidade sempre em mente.
+          Metas de curto e médio prazo
+          Consolidar habilidades em back-end, dominando Node.js, APIs REST, autenticação e banco de dados
+          Construir aplicações full stack completas e aplicáveis no mundo real
+          Aprimorar conhecimentos de DevOps, deploy e infraestrutura
+          Participar de projetos colaborativos de código aberto
+          Construir um portfólio sólido que traduza minhas competências para futuros empregadores ou clientes
+          e continuo ampliando minhas habilidades diariamente.
+          <strong>Confira meus projetos no Linkedin e GitHub: ⬇️</strong>
 
-            <div class="h4">
-              <h4>Linkedin</h4>
-            </div>
-
-            <div class="linke">
-              <a href="https://www.linkedin.com/in/jo%C3%A3o-mateus-martins-alves-454745290/" target="_blank"><i
-                  class="fab fa-linkedin-in"></i></a>
-            </div>
-
-            <div class="h4">
-              <h4>Github</h4>
-            </div>
-
-            <div class="githu">
-              <a href="https://github.com/Joao-Mateus-Martins" target="_blank"><i class="fab fa-github"></i></a>
-            </div>
-
-          </div>
-
-          </p>
-        </div>
+        </p>
       </div>
     </div>
+
     
+
+    <footer class="link">
+
+      <div class="linke">
+        <a href="https://www.linkedin.com/in/jo%C3%A3o-mateus-martins-alves-454745290/" target="_blank"><i
+            class="fab fa-linkedin-in"></i></a>
+      </div>
+
+
+      <div class="githu">
+        <a href="https://github.com/Joao-Mateus-Martins" target="_blank"><i class="fab fa-github"></i></a>
+      </div>
+
+    </footer>
 
   </section>
 
-  
+
 
 
   <div class="especialidades" id="especialidades">
     <h2>Especialidades</h2>
-    <br>
+    
   </div>
 
   <main class="baixo">
@@ -277,11 +270,10 @@
     </div>
     </div>
   </main>
-
-
-  <div id="projects"></div>
-
-
+  
+<div id="projects"></div>
+  
+  
   <div>
     <h2 class="projeto">Alguns <span class="p">Projetos</span></h2>
   </div>
@@ -289,6 +281,7 @@
   <div class="contaneir reverse" style="--width: 400px; --height: 590px; --quantity: 6;">
 
     <h4>Clique ⬇️</h4>
+
     <div class="carrosel">
       <a href="https://pokedex-1-chi.vercel.app/" target="_blank">
         <div class="item" style="--delay:0"><img src="Img/item2-1.png" alt=""></div>
@@ -318,10 +311,10 @@
     </div>
   </div>
 
-  <div id="contato"></div>
-  <br>
+  
 
-  <form class="Contact">
+
+  <form id="contato" class="Contact">
     <h2>Mande uma <span class="M">Mensagem</span></h2>
     <div>
       <ul>
@@ -351,7 +344,7 @@
   </form>
 
 
-  
+
   <footer class="rodape">
 
     <div class="tag">
