--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>João Mateus | Desenvolvedor Web</title>
   <script defer src="script.js"></script>
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="styles2.css">
+  <link rel="stylesheet" href="Menu.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
   
@@ -71,7 +71,7 @@
     <div class="hero-content">
       <div class="hero-left">
         <div class="profile-img" id="home">
-          <img src="Img/profile.png" alt="Profile Image">
+          <img src="Img/ChatGPT Image 26 de jan. de 2026, 23_43_20.png" alt="Profile Image">
         </div>
       </div>
       <div class="hero-right">
