--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
 
           <div class="i">
-            <a href="https://www.instagram.com/joao_mateus.m.a/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/dev.jm.web/" target="_blank"><i class="fab fa-instagram"></i></a>
           </div>
 
         </div>
@@ -153,7 +153,7 @@
           Participar de projetos colaborativos de código aberto
           Construir um portfólio sólido que traduza minhas competências para futuros empregadores ou clientes
           e continuo ampliando minhas habilidades diariamente.
-          <strong>Confira meus projetos no Linkedin e GitHub: ⬇️</strong>
+          <strong>Confira meus projetos no Link-bio, Linkedin e GitHub: ⬇️</strong>
 
         </p>
       </div>
@@ -171,6 +171,10 @@
 
       <div class="githu">
         <a href="https://github.com/Joao-Mateus-Martins" target="_blank"><i class="fab fa-github"></i></a>
+      </div>
+
+      <div class="githu">
+        <a href="https://link-bio-lilac.vercel.app/" target="_blank"><i class="fas fa-globe"></i></a>
       </div>
 
     </footer>
@@ -382,7 +386,7 @@
         </div>
 
         <div class="i">
-          <a href="https://www.instagram.com/joao_mateus.m.a/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/dev.jm.web/" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
 
       </div>
