--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 <div id="projects"></div>
   
   
-  <div>
+  <div class="projeto">
     <h2 class="projeto">Alguns <span class="p">Projetos</span></h2>
   </div>
 
